--- a/docs/style.css
+++ b/docs/style.css
@@ -1,5 +1,5 @@
 der-image {
-    background-image: url("http://orig14.deviantart.net/7584/f/2015/181/2/7/flat_mountains_landscape_by_ggiuliafilippini-d8zdbco.jpg");
+    background-image: url("https://orig14.deviantart.net/7584/f/2015/181/2/7/flat_mountains_landscape_by_ggiuliafilippini-d8zdbco.jpg");
     background-position: center center;
     background-repeat: no-repeat;
     background-attachment: fixed;
